[library-spring] refactor controllers`